# Cobalt

./: Cargo.toml  README.md
.github  /ISSUE_TEMPLATE/: config.yml
.github/ISSUE_TEMPLATE/: config.yml  crash-reports.yml  panic.yml
crates/cobalt/: Cargo.toml
crates/cobalt/resources/: VibrationEvent.xml
crates/cobalt/src/: audio.rs  bundle.rs  catalog.rs  combatui.rs  combatvibration.rs  config.rs  lib.rs  msbt.rs  ringvibration.rs  save.rs  script.rs  sortie.rs  sprite.rs  support.rs  updater.rs  utils.rs  vibrationevents.rs
crates/cobalt/src/api/: mod.rs
crates/cobalt/src/api/events/: event.rs  mod.rs
crates/cobalt/src/api/lua/: mod.rs
crates/cobalt/src/audio/: gamesound.rs  soundmanager.rs  soundplay.rs  wwise.rs
crates/cobalt/src/config/: cobalt.rs  combatpopup.rs  combatui.rs  combatvibration.rs  gamemode.rs  overclock.rs  plugins.rs  ringpolishrumble.rs  supportoutfit.rs
crates/cobalt/src/graphics/: lod.rs  mod.rs  render_scale.rs
crates/cobalt/src/sequences/: mod.rs  titleloop.rs
crates/cobalt/src/sequences/mainmenu/: mod.rs
crates/cobalt/src/sequences/mainmenu/cobaltmenu/: mod.rs
crates/cobalt/src/sequences/mainmenu/cobaltmenu/sequences/: mod.rs  reloadmsbt.rs  reloadxml.rs  settings.rs  update.rs
crates/cobalt/src/sequences/mainmenu/cobaltmenu/sequences/settings/: lod.rs  opening.rs  plugins.rs  render_scale.rs  render_scale_toggle.rs  util.rs
crates/cobalt/src/sequences/mainmenu/topmenu/: menu.rs
crates/cobalt/src/sortie/: refine.rs  skillinheritance.rs
crates/cobalt/src/vibrations/: hooks.rs  mod.rs  queue_handlers.rs  util.rs
crates/cobalt/src/vibrations/combat/: criticals.rs  hits.rs  mod.rs
crates/cobalt/src/vibrations/combat/projectiles/: magical.rs  mod.rs  physical.rs  rods.rs
crates/cobalt/src/vibrations/development/: mod.rs  reloadhooks.rs
crates/cobalt/src/vibrations/map/: map.rs
crates/cobalt/src/vibrations/sound_events/: mod.rs  sound_event_handlers.rs
crates/gamedata/: Cargo.toml
crates/gamedata/src/: gamedata.rs  lib.rs
crates/gamedata/src/gamedata/: support.rs  vibrationevent.rs
crates/loader/: Cargo.toml
crates/loader/src/: lib.rs
crates/mods/: Cargo.toml
crates/mods/src/: bucket_map.rs  builder.rs  interner.rs  lib.rs  manager.rs  provider.rs  vfs.rs
crates/updater/: Cargo.toml
crates/updater/src/: lib.rs
packaged/exefs/: main.npdm
src/: bootstrap.rs  lib.rs  logger.rs  old_api.rs  utils.rs
src/api/: hooks.rs  memory.rs  mod.rs
src/logger/: kernel.rs  tcp.rs
